--- a/IOTProjectServer/WebContent/index.html
+++ b/IOTProjectServer/WebContent/index.html
@@ -22,11 +22,13 @@
 			<h3>Add Device</h3>
 			<form action="./registerDevice">
 				<label>DeviceID:</label><input type="text" name="deviceID"><br />
-				<label>Address:</label><input type="text" name="address"><br />
-				<label>Name:</label><input type="text" name="name"><br /> <label>Manufacturer:</label><input
-					type="text" name="manufacturer"><br /> <label>Location:</label><input
-					type="text" name="location"><br /> <label>Type:</label><input
-					type="text" name="type"><br />
+				<label>HouseID:</label><input type="text" name="houseID"><br />
+				<label>Name:</label><input type="text" name="name"><br /> 
+				<label>Manufacturer:</label><input type="text" name="manufacturer"><br /> 
+				<label>Location:</label><input type="text" name="location"><br /> 
+				<label>Type:</label><input type="text" name="type"><br />
+				<label>Connected:</label><input type="text" name="connected"><br />
+				<label>Current State:</label><input type="text" name="currentState"><br />
 				<p />
 				<input type="submit" value="Add Device">
 			</form>
